tests/diagnostic_golden/codegen_dynamic_concat.diag
error[CF3119]: invalid operand type for expression operator
  --> tests/diagnostic_golden/codegen_dynamic_concat.f:4:16
   = stage: semantic
   = help: see docs/errors.md#CF3119
  |
4 |       C = A // I
  |                ^
   = note: Arithmetic operators require operands from compatible intrinsic categories.
   = help: Convert CHARACTER or LOGICAL operands before using arithmetic operators.
