tests/diagnostic_golden/codegen_dynamic_concat.f
      SUBROUTINE S(A,C,I)
      CHARACTER*(*) A,C
      INTEGER I
      C = A // I
      END
